--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-  <html lang="ja">
-    <head>
-      <meta charset="UTF-8" />
-    </head>
-    <body>
-      <script>
-        alert('Hello World');
-      </script>
-    </body>
-  </html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <script src="app.js"></script>
+  </body>
+</html>
