update:アラートウィンドウの記述をjsファイルからHTMLファイルに書き換え

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <script src="app.js"></script>
+    <script>
+      let hello = "Hello World";
+      alert(hello);
+    </script>
   </body>
 </html>
