--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -7,6 +7,8 @@
     <script>
       let hello = "Hello World";
       alert(hello);
+      let int1=1;
+      alert(int1);
     </script>
   </body>
 </html>
