update:update:アラートウィンドウを表示させる

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <script>
-      let hello = "Hello World";
-      alert(hello);
-      let int1=1;
-      alert(int1);
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
